# learn-pilot

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md
docs/adr/: 0001-rabbitmq-for-ingestion.md  0002-weaviate-vector-store.md  0003-embedding-multilingual-e5-large.md  0004-hosted-inference-at-start.md  0005-minio-object-store.md  0006-google-oauth-only.md  0007-ytdlp-defensive-cached.md  0008-microservices-krakend-gateway.md  0009-zitadel-idp.md  0010-krakend-trusted-headers.md  0011-schema-per-service-postgres.md  0012-hybrid-inter-service-comms.md  0013-monorepo-layout.md
docs/guides/: README.md  zitadel-google-setup.md
docs/plans/: 00-phase0-infra.md  01-identity-service.md  02-catalog-service.md  03-notes-service.md  04-ingestion-service.md  05-ai-service.md  README.md
docs/services/: 00-backend-services-and-final-shape.md  01-catalog-service.md  README.md
gateway/: krakend.json
infra/: .env.example  README.md  docker-compose.yml
infra/postgres/: init-zitadel-db.sh
infra/zitadel/: nginx.conf
services/catalog/: Dockerfile  alembic.ini  config.py  consumers.py  main.py  messaging.py  models.py  outbox_relay.py  plan_routes.py  plan_schemas.py  plan_service.py  plan_worker.py  pyproject.toml  quota.py  repository.py  routes.py  schemas.py  smoke.py
services/catalog/alembic/: env.py
services/catalog/alembic/versions/: 0001_initial.py
services/catalog/db/: __init__.py  session.py
services/identity/: Dockerfile  config.py  db.py  main.py  migrate.py  pyproject.toml  smoke.py  (+2 more)
shared/: __init__.py  auth.py  config.py  events.py  outbox.py  rabbit.py
(+1 files in other folders)
